@@ -13,15 +13,18 @@ up-to-date development database to work. On a continuous build server there is u
 Therefore, CC.rb uses the following logic to determine what to build:
 
 1. First, CC.rb loads all *.rake files from [cruise]/tasks/, and then the Rakefile of your_project.
-   Then it invokes <code>cc:build</code> task (defined in [cruise]/tasks/cc_build.rake). That task sets
-   <em>RAILS_ENV</em> to <code>test</code> (unless your Rakefile already set it to something else), looks at other
-   Rake tasks loaded, and decides what to do.
+   Then it invokes <code>cc:build</code> task (defined in [cruise]/tasks/cc_build.rake). This task looks at all other
+   Rake tasks (defined in your_project), and decides what to do.
 
 2. If there is <code>cruise</code> target, it simply invokes that target.
 
 3. If there is no <code>cruise</code> target, then it will try to prepare the test database by executing
    <code>db:test:purge</code> and <code>db:migrate</code> tasks (if they are defined in your build), then calling
    <code>test</code> target.
+
+p(hint) Unless your Rakefile has already set it to something else, operating system variable RAILS_ENV is set to
+        "test" before calling other default Rails tasks. This is to make sure that db: tasks work with the 
+        right database environment.
 
 4. Finally, if there is no <code>test</code> target, CC.rb will try to invoke <code>default</code> target.
 
